--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.45.1",
     "flowbite": "^2.2.1",
+    "flowbite-datepicker": "^1.2.6",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
