--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apexcharts": "^3.45.1",
     "flowbite": "^2.2.1",
     "flowbite-datepicker": "^1.2.6",
+    "flowbite-react": "^0.7.2",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
