--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-tailwind/react": "^2.1.9",
     "@reduxjs/toolkit": "^2.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -23,6 +24,7 @@
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "use-react-countries": "^2.0.0",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5",
     "yup": "^1.3.3"
