--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.15.1",
     "redux-persist": "^6.0.0",
     "use-react-countries": "^2.0.0",
     "web-vitals": "^2.1.4",
