change some calenders in forms and change search bar in navbar code

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.45.1",
     "file-saver": "^2.0.5",
+    "flatpickr": "^4.6.13",
     "flowbite": "^2.2.1",
     "flowbite-datepicker": "^1.2.6",
     "flowbite-react": "^0.7.2",
